--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -18,7 +18,11 @@
 <body>
     <%- include('studentNavbar') %>
     <div class="header">
-        <h2>Grade Card</h2>
+        <% if (signal=="1") { %>
+            <h2>Grade Card</h2>
+        <% } else { %>
+            <h2>Attendance</h2>
+            <% } %>
     </div>
     <div class="sub-header">
         <h5>
@@ -40,7 +44,11 @@
                         <div class="col col-2">Course Code</div>
                         <div class="col col-3">Course Name</div>
                         <div class="col col-4">Course Credits</div>
-                        <div class="col col-5">Grade</div>
+                            <% if (signal=="1") { %>
+                                <div class="col col-5">Grade</div>
+                            <% } else { %>
+                                <div class="col col-5">Attendance percentage</div>
+                                <% } %>
                     </li>
 
                     <% var spi=0,count=0 %>
@@ -59,19 +67,30 @@
                             <div class="col col-4" data-label="Batch">
                                 <%= result[i].courseEnrolled.credits %>
                             </div>
-                            <div class="col col-5" data-label="Branch">
-                                <% if (result[i].grade) { %>
-                                    <%= result[i].grade %>
-                                        <% spi +=result[i].grade %>
-                                            <% count++ %>
-                                                <% } else { %>
-                                                    -
-                                                    <% } %>
-                            </div>
+                            <% if (signal=="1") { %>
+                                <div class="col col-5" data-label="Branch">
+                                    <% if (result[i].grade) { %>
+                                        <%= result[i].grade %>
+                                            <% spi +=result[i].grade %>
+                                                <% count++ %>
+                                                    <% } else { %>
+                                                        -
+                                                        <% } %>
+                                </div>
+                            <% } else { %>
+                                <div class="col col-5" data-label="Branch">
+                                    <% if (result[i].attendance) { %>
+                                        <%= result[i].attendance %>
+                                    <% } else { %>
+                                        -
+                                        <% } %>
+                                </div>
+                            <% } %>
+                            
                         </li>
                         <% } %>
                 </ul>
-                <% if (count==6) { %>
+                <% if (count==6 && signal=="1") { %>
                     <% spi /=6 %>
                         <% spi=Math.round(spi * 100) / 100 %>
                             <h4>SPI: <%= spi %>
@@ -79,7 +98,7 @@
                             <button type="submit" name="result"
                                 value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
 
-                            <% } else { %>
+                            <% } else if (signal=="1") { %>
                                 <h4>SPI: Not declared</h4>
                                 <button disabled type="submit" name="result"
                                     value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
