--- a/views/instructorNavbar.ejs
+++ b/views/instructorNavbar.ejs
@@ -36,6 +36,12 @@
                 </a>
             </li>
             <li>
+                <a href="/instructorSemesterAttendance">
+                    <i class='bx bxs-report'></i>
+                    <span class="link_name">Course Attendance</span>
+                </a>
+            </li>
+            <li>
                 <a href="/passwordInstructor">
                     <i class='bx bx-cog'></i>
                     <span class="link_name">Change Password</span>
