--- a/views/instructorSemester.ejs
+++ b/views/instructorSemester.ejs
@@ -23,6 +23,7 @@
         <section class="home-section">
             <div class="table-container">
                 <form action="/instructorSemester" method="post">
+                    <input type="hidden" name="signal" value="<%= signal %>">
                     <ul class="table-responsive-lg">
                         <li class="thead-dark">
                             <div class="col col-1">SR No</div>
