--- a/views/studentNavbar.ejs
+++ b/views/studentNavbar.ejs
@@ -52,7 +52,7 @@
                     <i class='bx bxs-report'></i>
                     <span class="link_name">Result</span>
                 </a>
-                <a href="/studentHome">
+                <a href="/semesterResultsAttendance">
                     <i class='bx bxs-user-check bx-sm'></i>
                     <span class="link_name">Attendance</span>
                 </a>
