--- a/views/semesterResults.ejs
+++ b/views/semesterResults.ejs
@@ -12,17 +12,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/table.css" />
-    <title>Semester Results</title>
+    <title>Semester Details</title>
 </head>
 
 <body>
     <%- include('studentNavbar') %>
     <div class="header">
-        <h2>Semester Results</h2>
+        <% if (signal=="1") { %>
+            <h2>Semester Results</h2>
+        <% } else { %>
+            <h2>Semester Attendance</h2>
+        <% } %>
+        
     </div>
         <section class="home-section">
             <div class="table-container">
                 <form action="/semesterResults" method="post">
+                    <input type="hidden" name="signal" value="<%= signal %>">
                     <ul class="table-responsive-lg">
                         <li class="thead-dark">
                             <div class="col col-1">Semester Number</div>
