completed left-overs

--- a/views/viewDegree.ejs
+++ b/views/viewDegree.ejs
@@ -66,22 +66,27 @@
 
             for (i of btns) {
                 i.addEventListener('click', function () {
-                    
-                    Swal.fire({
-                        title: 'Are you sure?',
-                        text: "You won't be able to revert this!",
-                        icon: 'warning',
-                        showCancelButton: true,
-                        confirmButtonColor: '#3085d6',
-                        cancelButtonColor: '#d33',
-                        confirmButtonText: 'Yes, delete it!'
-                    }).then((result) => {
-                        if (!result.isConfirmed) {
-        
-                            event.preventDefault();
-                        }
-                    })
+                    if (!confirm("Are you sure you want to delete?")) {
+                        event.preventDefault();
+                    }
                 });
+                // i.addEventListener('click', function () {
+                    
+                //     Swal.fire({
+                //         title: 'Are you sure?',
+                //         text: "You won't be able to revert this!",
+                //         icon: 'warning',
+                //         showCancelButton: true,
+                //         confirmButtonColor: '#3085d6',
+                //         cancelButtonColor: '#d33',
+                //         confirmButtonText: 'Yes, delete it!'
+                //     }).then((result) => {
+                //         if (!result.isConfirmed) {
+        
+                //             event.preventDefault();
+                //         }
+                //     })
+                // });
             }
         </script>
 </body>
