--- a/views/instructorNavbar.ejs
+++ b/views/instructorNavbar.ejs
@@ -25,8 +25,8 @@
                     <i class='bx bxs-chevron-down arrow'></i>
                 </div>
                 <ul class="sub-menu">
-                    <li><a href="/viewStudent" class="sub-list">View details</a></li>
-                    <li><a href="/updateStudent" class="sub-list">Update details</a></li>
+                    <li><a href="/viewInstructor" class="sub-list">View details</a></li>
+                    <li><a href="/updateInstructor" class="sub-list">Update details</a></li>
                 </ul>
             </li>
             <li>
@@ -37,7 +37,7 @@
             </li>
             <li>
                 <a href="/instructorSemesterAttendance">
-                    <i class='bx bxs-report'></i>
+                    <i class='bx bxs-user-check bx-sm'></i>
                     <span class="link_name">Course Attendance</span>
                 </a>
             </li>
@@ -51,7 +51,12 @@
             <li>
                 <div class="profile-details">
                     <div class="profile-content">
-                        <img src="img/faculty.png" alt="profileImg">
+                        <% if (typeof(instructor.profilePicture)==='undefined' ) { %>
+                            <img src="img/dp.PNG" alt="">
+                            <% } else { %>
+                                <img src="data:<%= instructor.profilePicture.contentType %>;base64,<%= instructor.profilePicture.toString('base64') %>"
+                                    alt="Profile Picture">
+                                <% } %>
                     </div>
                     <div class="name-job">
                         <div class="profile_name">
