--- a/views/studentNavbar.ejs
+++ b/views/studentNavbar.ejs
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <form action="/logoutStudent?_method=DELETE" method="POST">
-                        <button type="submit" class="logout"><i class='bx bx-log-out'></i></button>
+                        <button type="submit" class="logout" onclick="event.preventDefault(); showConfirmation();"><i class='bx bx-log-out'></i></button>
                     </form>
                 </div>
             </li>
@@ -98,7 +98,11 @@
 <!-- Javascript section -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 <script>
     let arrow = document.querySelectorAll(".arrow");
@@ -115,4 +119,20 @@
         menu_toggle.classList.toggle('is-active');
         sidebar.classList.toggle('is-active');
     });
+
+    function showConfirmation() {
+        Swal.fire({
+            title: 'Sign out?',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Submit the form
+                document.querySelector('form').submit();
+            }
+        })
+    }
 </script>
