--- a/views/instructorDetails.ejs
+++ b/views/instructorDetails.ejs
@@ -5,26 +5,135 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/form.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Welcome Instructor</title>
 </head>
 
 <body>
-    <form action="/instructorDetails" method="post">
-        <input type="text" placeholder="Full Name" name="fullname" value="<%= instructor.fullname %>" required>
-        <input type="date" placeholder="Date of Birth" name="dob" required>
-        <input type="text" placeholder="Mobile number" name="mobileNO" required>
-        <input type="email" placeholder="College email ID" name="email" value="<%= instructor.email %>" disabled>
-        <input type="email" placeholder="Personal email ID" name="myemail">
-        <div class="radio-checkbox-container">
-            <p>Gender</p>
-            <label> <input type="radio" id="male" name="gender" value="Male" required> <span>Male</span></label>
-            <label> <input type="radio" id="female" name="gender" value="Female" required> <span>Female</span></label>
-            <label> <input type="radio" id="other" name="gender" value="Other" required> <span>Other</span></label>
+
+    <section class="form-body">
+        <form action="/logoutInstructor?_method=DELETE" method="POST">
+            <button type="submit" class="logout lgbtn" onclick="event.preventDefault(); showConfirmation();">Logout<i
+                    class="bx bx-log-out"></button>
+        </form>
+        <!-- <button class="lgbtn">
+            Logout
+            <i class="bx bx-log-out">
+        </button> -->
+        <div class="student-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        <h3> Faculty Registration Form</h3>
+                        <form action="/instructorDetails" class="mb-5" method="post" id="contactForm"
+                            name="contactForm">
+                            <div class="row">
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="" class="col-form-label">Full Name *</label>
+                                    <input class="form-control" type="text" placeholder="Full Name" name="fullname"
+                                        value="<%= instructor.fullname %>" required>
+                                </div>
+
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3 ">
+                                    <label for="gender" class="col-form-label">Gender *</label>
+                                    <div class="form control unique">
+                                        <div class="form-check-inline">
+                                            <input class="form-check-input" style="margin-top: 8px;" type="radio"
+                                                name="gender" id="male" value="Male">
+                                            <label class="form-check-label" for="inlineRadio1">Male</label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <input class="form-check-input" style="margin-top: 8px;" type="radio"
+                                                name="gender" id="female" value="Female">
+                                            <label class="form-check-label">Female</label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <input class="form-check-input" style="margin-top: 8px;" type="radio"
+                                                name="gender" id="other" value="Other">
+                                            <label class="form-check-label">Other</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 date">
+                                    <label for="dob" class="col-form-label">Date of Birth *</label>
+                                    <input class="form-control input-dob" type="date" placeholder="Date of Birth"
+                                        name="dob" required>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="mobileno" class="col-form-label">Mobile No. *</label>
+                                    <input type="text" class="form-control" name="mobile-no" id="mobile-no"
+                                        placeholder="000-000-0000">
+                                </div>
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="cmail" class="col-form-label">College E-mail *</label>
+                                    <input class="form-control" type="email" placeholder="College email ID" name="email"
+                                        value="<%= instructor.email %>" disabled>
+                                </div>
+                            </div>
+
+
+                            <div class="col-md-12 form-group mb-3">
+                                <label for="pmail" class="col-form-label">Personal E-mail</label>
+                                <input type="email" class="form-control" name="p-mail" id="p-mail"
+                                    placeholder="Personal E-mail">
+                            </div>
+
+
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="New-Password" class="col-form-label">New Password *</label>
+                                    <input type="password" class="form-control" name="password" id="password"
+                                        placeholder="Enter Password">
+                                </div>
+                                <div class="col-md-6 form-group mb-3">
+                                    <label for="Confirm-Password" class="col-form-label">Confirm Password *</label>
+                                    <input type="password" class="form-control" name="repassword" id="repassword"
+                                        placeholder="Enter password">
+                                </div>
+                            </div>
+
+                            <div class="input-field">
+                                <input type="submit" class="submit" value="Submit">
+                            </div>
+                        </form>
+
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <input type="password" name="password" placeholder="New password">
-        <input type="password" name="repassword" placeholder="Confirm password">
-        <button type="submit">Submit</button>
-    </form>
+
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        function showConfirmation() {
+            Swal.fire({
+                title: 'Sign out?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Submit the form
+                    document.querySelector('form').submit();
+                }
+            })
+        }
+    </script>
 </body>
 
 </html>
