--- a/views/addInstructor.ejs
+++ b/views/addInstructor.ejs
@@ -10,18 +10,42 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Add Instructor</title>
 </head>
 <body>
     <%- include('adminNavbar') %>
+    <section class="form-body">
 
-    <div class="main-body-top">
-        <form action="/addInstructor" method="post">
-            <input type="text" name="fullname" placeholder="Full name">
-            <input type="email" name="email" placeholder="College Email ID">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-    
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Add Instructor</h3>
+                    
+                        <form action="/addInstructor" method="post" class="mb-5" id="contactForm" name="contactForm">
+            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Instructorname" class="col-form-label">Instructor Name </label>
+                                    <input type="text" class="form-control" name="fullname" placeholder="Full name">
+                                </div>                              
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Instructoremail" class="col-form-label">Instructor Email </label>
+                                    <input type="email" class="form-control" name="email" placeholder="College Email ID">
+                                </div>
+                                
+                         
+                                <div class="input-field">
+                                    <button class="submit" type="submit">Submit</button>
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
