--- a/views/passwordInstructor.ejs
+++ b/views/passwordInstructor.ejs
@@ -12,22 +12,46 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Change Password</title>
 </head>
 
 <body>
     <%- include('instructorNavbar') %>
-        <div class="header">
-            <h2>Chnage password</h2>
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Change Password</h3>
+                    
+                        <form action="/passwordInstructor" method="post" class="mb-5" id="contactForm" name="contactForm">
+                           
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="New-Password" class="col-form-label">New Password *</label>
+                                    <input type="password" class="form-control" name="password" placeholder="New password">
+                                </div>
+                         
+                            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Conform-new-Password" class="col-form-label">Confirm New Password *</label>
+                                    <input type="password" class="form-control" name="repassword" placeholder="Confirm new password">
+                                </div>
+                          
+                                <div class="input-field">
+                                    <input type="submit" class="submit" value="Submit">
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
-        <div class="sub-header">
-            <form action="/passwordInstructor" method="post">
-                <input type="password" name="password" id="" placeholder="New password">
-                <input type="password" name="repassword" id="" placeholder="Confirm new password">
-                <button type="submit">Submit</button>
-            </form>
-        </div>
+    </section>
 </body>
 
 </html>
