--- a/views/updateInstructor.ejs
+++ b/views/updateInstructor.ejs
@@ -1,33 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
 
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/form.css" />
     <title>Instructor dashboard</title>
-</head>
-<body>
+  </head>
+  <body>
     <%- include('instructorNavbar') %>
     <!-- main body section -->
-    <div class="main-body-top">
-        <form action="/updateInstructor" method="post">
-            <input type="text" placeholder="Full Name" value="<%= instructor.fullname %>" name="fullname" required>
-            <input type="date" placeholder="Date of Birth" value="<%= instructor.dob %>"  name="dob" required>
-            <input type="text" placeholder="Mobile number" name="mobileNO" value="<%= instructor.mobileNO %>"  required>
-            <input type="email" placeholder="Personal email ID" name="myemail" value="<%= instructor.myemail%>" required>
-                <p>Gender</p>
-                <label> <input type="radio" id="male" name="gender" value="Male" required> <span>Male</span></label>
-                <label> <input type="radio" id="female" name="gender" value="Female" required> <span>Female</span></label>
-                <label> <input type="radio" id="other" name="gender" value="Other" required> <span>Other</span></label>
+    <section class="form-body">
+      <div class="form-container">
+        <div class="row align-items-stretch no-gutters contact-wrap">
+          <div class="col-md-12">
+            <div class="form h-100">
+              <h3>Update Instructor Details</h3>
+
+              <form
+                action="/updateStudent"
+                method="post"
+                class="mb-5"
+                id="contactForm"
+                name="contactForm"
+              >
+                <div class="row">
+                  <div class="col-lg-4 form-group mb-3">
+                    <label for="firstname" class="col-form-label"
+                      >Full Name *</label
+                    >
+                    <input
+                      class="form-control"
+                      type="text"
+                      placeholder="Full Name"
+                      value="<%= instructor.fullname %>"
+                      name="fullname"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div
+                  class="radio-checkbox-container col-lg-6 form-group mb-3"
+                >
+                  <label for="gender" class="col-form-label">Gender *</label>
+                  <div class="form control unique">
+                    <div class="form-check-inline">
+                      <% if (instructor.gender=="Male") { %>
+                      <input
+                        style="accent-color: #434242 !important"
+                        class="form-check-input"
+                        style="margin-top: 3px"
+                        type="radio"
+                        name="gender"
+                        id="male"
+                        value="Male"
+                        checked
+                      />
+                      <% } else { %>
+                        <input
+                        style="accent-color: #434242 !important"
+                        class="form-check-input"
+                        style="margin-top: 3px"
+                        type="radio"
+                        name="gender"
+                        id="male"
+                        value="Male"
+                      />
+                        <% } %>
+
+                      <label
+                        style="accent-color: #434242"
+                        class="form-check-label"
+                        for="inlineRadio1"
+                        >Male</label
+                      >
+                    </div>
+                    <div class="form-check-inline">
+                      <% if (instructor.gender=="Female") { %>
+                      <input
+                        style="accent-color: #434242"
+                        class="form-check-input"
+                        style="margin-top: 3px"
+                        type="radio"
+                        name="gender"
+                        id="female"
+                        value="Female"
+                        checked
+                      />
+                      <% } else { %>
+                        <input
+                          style="accent-color: #434242"
+                          class="form-check-input"
+                          style="margin-top: 3px"
+                          type="radio"
+                          name="gender"
+                          id="female"
+                          value="Female"
+                        />
+                        <% } %>
+                      <label class="form-check-label">Female</label>
+                    </div>
+                    <div class="form-check-inline">
+                      <% if (instructor.gender=="Other") { %>
+                      <input
+                        class="form-check-input"
+                        style="margin-top: 3px"
+                        type="radio"
+                        name="gender"
+                        id="other"
+                        value="Other"
+                        checked
+                      />
+                      <% } else { %>
+                        <input
+                          class="form-check-input"
+                          style="margin-top: 3px"
+                          type="radio"
+                          name="gender"
+                          id="other"
+                          value="Other"
+                        />
+                        <% } %>
+                      <label class="form-check-label">Other</label>
+                    </div>
+                  </div>
+                </div>
+                  <div class="col-lg-6 form-group mb-3">
+                    <label for="dob" class="col-form-label"
+                      >Date of Birth *</label
+                    >
+                    <input
+                      type="date"
+                      class="form-control"
+                      placeholder="Date of Birth"
+                      value="<%= instructor.dob %>"
+                      name="dob"
+                      required
+                    />
+                  </div>
+                </div>
+
+                <div class="col-lg-12 form-group mb-3">
+                  <label for="dob" class="col-form-label">Mobile No. *</label>
+                  <input
+                    class="form-control"
+                    type="text"
+                    placeholder="Mobile number"
+                    name="mobileNO"
+                    value="<%= instructor.mobileNO %>"
+                    required
+                  />
+                </div>
+                <div class="row">
+                  <div class="col-lg-12 form-group mb-3">
+                    <label for="pemail" class="col-form-label"
+                      >Personal Email *</label
+                    >
+                    <input
+                      class="form-control"
+                      type="email"
+                      placeholder="Personal email ID"
+                      name="myemail"
+                      value="<%= instructor.myemail%>"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="input-field">
+                  <button class="submit" type="submit">Submit</button>
+                </div>
+              </form>
             </div>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-</body>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
