--- a/views/addDegree.ejs
+++ b/views/addDegree.ejs
@@ -10,16 +10,38 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Add Degree</title>
 </head>
 <body>
     <%- include('adminNavbar') %>
-    <div class="main-body-top">
-        <form action="/addDegree" method="post">
-            <input type="text" placeholder="Degree name" name="name">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-    
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Add Degree</h3>
+                    
+                        <form action="/addDegree" method="post" class="mb-5" id="contactForm" name="contactForm">
+            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Coursename" class="col-form-label">Degree Name </label>
+                                    <input type="text" class="form-control" placeholder="Degree name" name="name">     
+                                </div>
+                                
+                         
+                                <div class="input-field">
+                                    <button class="submit" type="submit">Submit</button>
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section> 
 </body>
 </html>
