--- a/views/viewStudent.ejs
+++ b/views/viewStudent.ejs
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
@@ -17,69 +15,77 @@
 <body>
     <%- include('studentNavbar') %>
         <!-- main body section -->
-        <div class="header">
-            <h2>Personal Details</h2>
-        </div>
-        <div class="sub-header">
-            <h5> <b>Full name : </b>
-                <%= student.firstname + " " + student.middlename + " " + student.lastname%>
-            </h5>
-            <% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
-                <h5> <b>Date of Birth : </b>
-                    <%= student.dob.toLocaleDateString("en-US", options) %>
-                </h5>
-                <h5> <b>Gender : </b>
-                    <%= student.gender %>
-                </h5>
-                <h5> <b>Mobile Number : </b>
-                    <%= student.mobileNO %>
-                </h5>
-                <h5> <b>Personal Email : </b>
-                    <%= student.myemail %>
-                </h5>
-                <h5> <b>Parent Email : </b>
-                    <%= student.parentEmail %>
-                </h5>
-                <h5> <b>Profile picture : </b>
+        <div class="student-container">
+            <div class="st-left">
+                <div class="left-head">
+                    <div class="profile">
                     <% if (typeof(student.profilePicture)==='undefined') { %>
-                        <img src="img/dp.PNG" alt="">
+                        <img class="profile-image" src="img/dp.PNG" alt="">
                     <% } else { %>
-                        <img src="data:<%= student.profilePicture.contentType %>;base64,<%= student.profilePicture.toString('base64') %>" alt="Profile Picture">
-                    <% } %>
-                </h5>
-                <h5> <b>Weight : </b>
-                    <%= student.weight %>
-                </h5>
-                <h5> <b>Height : </b>
-                    <%= student.height %>
-                </h5>
-                <h5> <b>Blood Group : </b>
-                    <%= student.bloodGroup %>
-                </h5>
-                <h5> <b>Address : </b>
-                    <%= student.address %>
-                </h5>
+                        <img class="profile-image" src="data:<%= student.profilePicture.contentType %>;base64,<%= student.profilePicture.toString('base64') %>" alt="Profile Picture">
+                    <% } %>  
+                    </div> 
+                    <div class="name">           
+                    <strong><%= student.firstname + " " + student.middlename + " " + student.lastname%></strong>
+                    </div>
+
+                </div>
+                <div class="left-body">
+                    <p class="field"><strong>Student Id:</strong> <%= student.studentID %></p>
+                    <p class="field"><strong>Batch:</strong> <%= student.batch %></p>
+                    <p class="field"><strong>Program:</strong> <%= student.programRegistered.degreeOffered.name + " " + student.programRegistered.branchOffered.name%></p>
+                    <p class="field"><strong>Semester:</strong> <%= x %></p>
+                </div>
+            </div>
+            <div class="st-right">
+                <p class="field1"><strong>General Information</strong></p>
+                <table class="profile-table">
+                    
+                    <tr>
+                        <% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
+                        <th><strong>Birth Date</strong></th>
+                        <td><%= student.dob.toLocaleDateString("en-US", options) %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Gender</strong></th>
+                        <td><%= student.gender %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Weight</strong></th>
+                        <td><%= student.weight %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Height</strong></th>
+                        <td> <%= student.height %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Bloodgroup</strong></th>
+                        <td> <%= student.bloodGroup %> </td>
+                    </tr>
+                </table>
+                <p class="field1"><strong>Contact Information</strong></p>
+                <table class="profile-table">
+                    <tr>
+                        <th><strong>Contact No.</strong></th>
+                        <td> <%= student.mobileNO %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Personal Email</strong></th>
+                        <td> <%= student.myemail %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Parent Email</strong></th>
+                        <td><%= student.parentEmail %></td>
+                    </tr>
+                    <tr>
+                        <th><strong>Address</strong></th>
+                        <td><%= student.address %></td>
+                    </tr>
+                    </table>
+            </div>
         </div>
-        <div class="header">
-            <h2>Academic Details</h2>
-        </div>
-        <div class="sub-header">
-            <br>
-            <h5> <b>Student ID : </b>
-                <%= student.studentID %>
-            </h5>
-            <h5> <b> Batch : </b>
-                <%= student.batch %>
-            </h5>
-            <h5> <b>College Email</b>
-                <%= student.email %>
-            </h5>
-            <h5> <b>Program : </b>
-                <%= student.programRegistered.degreeOffered.name + " " + student.programRegistered.branchOffered.name%>
-            </h5>
-            <h5> <b>Current Semester : </b>
-                <%= x %>
-            </h5>
+        <div class="lower">
+
         </div>
 </body>
 
