--- a/views/addAdmin.ejs
+++ b/views/addAdmin.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,18 +11,47 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Add admin</title>
 </head>
-<body>
+
+<body style="background-color: #fff;">
     <%- include('adminNavbar') %>
 
-    <div class="main-body-top">
-        <form action="/addAdmin" method="post">
-            <input type="email" name="email" placeholder="Email ID">
-            <input type="password" name="password" placeholder="Password">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-    
+<section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Admin Registration Form</h3>
+                    
+                        <form action="/addAdmin" method="post" class="mb-5" id="contactForm" name="contactForm">
+                           
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="cmail" class="col-form-label">Admin E-mail *</label>
+                                    <input type="email" class="form-control" name="email" placeholder="Email ID">
+                                </div>
+                         
+                            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="New-Password" class="col-form-label">Password *</label>
+                                    <input type="password" class="form-control" name="password" placeholder="Password">
+                                </div>
+                          
+                                <div class="input-field">
+                                    <input type="submit" class="submit" value="Submit">
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 </body>
+
 </html>
