--- a/views/addBranch.ejs
+++ b/views/addBranch.ejs
@@ -10,17 +10,40 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/form.css">
     <title>Add Branch</title>
 </head>
-<body>
+<body style="background-color: #fff;">
 
     <%- include('adminNavbar') %>
-    <div class="main-body-top">
-        <form action="/addBranch" method="post">
-            <input type="text" placeholder="Branch name" name="name">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-    
+    <section class="form-body">
+
+        <div class="form-container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        
+                        <h3>Add Branch</h3>
+                    
+                        <form action="/addBranch" method="post" class="mb-5" id="contactForm" name="contactForm">
+            
+                                <div class="col-lg-12 form-group mb-3">
+                                    <label for="Branch" class="col-form-label">Branch Name </label>
+                                    <input type="text" class="form-control" placeholder="Branch name" name="name">
+                            
+                                    
+                                </div>
+                         
+                                <div class="input-field">
+                                    <input type="submit" class="submit" value="Submit">
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>    
 </body>
 </html>
